--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,12 +1,16 @@
 ---
-import type { HTMLAttributes } from 'astro/types';
+import type { HTMLAttributes } from "astro/types";
 
-type Props = HTMLAttributes<'a'>;
+type Props = HTMLAttributes<"a"> & {
+	active?: boolean;
+};
 
-const { href, class: className, ...props } = Astro.props;
+const { active, href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
-const isActive = href === pathname || href === pathname.replace(/\/$/, '');
+
+const isActive =
+	href === pathname || href === pathname.replace(/\/$/, "") || active;
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
@@ -14,11 +18,11 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 </a>
 <style>
 	a {
-		display: inline-block;
 		text-decoration: none;
+		padding: 1rem;
 	}
 	a.active {
 		font-weight: bolder;
-		text-decoration: underline;
+		color: #005cef;
 	}
 </style>
