--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="nl">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>Kijkgat!</h1>
-			<p>Tekst</p>
+			<picture>
+				<img src="kijkgat.gif" alt="Description of the image" loading="eager" />
+			</picture>
 		</main>
 		<Footer />
 	</body>
