--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,34 @@
 ---
-const today = new Date();
+import People from "./People.astro";
 ---
 
+<div class="people_container">
+	<div class="people">
+		<People />
+	</div>
+</div>
+
 <footer>
-	&copy; {today.getFullYear()} Your name here. All rights reserved.
+	<span>Kijkgat&copy;</span>
 </footer>
 <style>
 	footer {
-		padding: 2em 1em 6em 1em;
-		background: black;
-		color: white;
+		margin: 0;
+		padding: 0 1em;
+		border-top: 0.4rem solid black;
+		display: flex;
+		justify-content: center;
+	}
+	span {
+		padding-top: 0.3rem;
 		text-align: center;
+	}
+	.people {
+		width: 18%;
+		margin-bottom: -10px;
+	}
+	.people_container {
+		display: flex;
+		justify-content: center;
 	}
 </style>
