--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,50 +5,29 @@ import { SITE_TITLE } from "../consts";
 
 <header>
 	<nav>
-		<h2><a href="/">{SITE_TITLE}</a></h2>
-		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-		</div>
+		<HeaderLink href="#kijkgat">Kijkgat</HeaderLink>
+		<HeaderLink href="#ervaar">Ervaar</HeaderLink>
+		<HeaderLink href="#contact">Contact</HeaderLink>
+		<HeaderLink href="#niet">Wat is het niet</HeaderLink>
 	</nav>
 </header>
 <style>
 	header {
 		margin: 0;
 		padding: 0 1em;
-		background: white;
-		box-shadow: 0 2px 8px rgba(var(--black), 5%);
-	}
-	h2 {
-		margin: 0;
-		font-size: 1em;
-	}
-
-	h2 a,
-	h2 a.active {
-		text-decoration: none;
+		border-bottom: 0.4rem solid black;
 	}
 	nav {
 		display: flex;
-		align-items: center;
-		justify-content: space-between;
+		padding-top: 1em;
+		padding-bottom: 1em;
+		justify-content: flex-end;
 	}
-	nav a {
-		padding: 1em 0.5em;
-		color: var(--black);
-		border-bottom: 4px solid transparent;
-		text-decoration: none;
-	}
-	nav a.active {
-		text-decoration: none;
-		border-bottom-color: var(--accent);
-	}
-	.social-links,
-	.social-links a {
-		display: flex;
-	}
-	@media (max-width: 720px) {
-		.social-links {
-			display: none;
+	@media screen and (max-width: 768px) {
+		nav {
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-between;
 		}
 	}
 </style>
