--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import People from "./People.astro";
+import Logo from "./Logo.astro";
 ---
 
 <div class="people_container">
@@ -24,9 +25,10 @@ import People from "./People.astro";
 		text-align: center;
 	}
 	.people {
-		width: 18%;
+		width: 20%;
 		margin-bottom: -10px;
 	}
+
 	.people_container {
 		display: flex;
 		justify-content: center;
