--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,14 @@ body {
 	color: #242124;
 }
 
+.not_container{
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	align-items:center;
+	column-gap: 1rem;
+}
+
 section{
 	text-align:center;
 }
@@ -151,6 +159,7 @@ hr {
 	justify-content: center;
 	padding:1rem;
 }
+
 
 button{
 	cursor: pointer;
