--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,9 @@ import Circle from "../components/Circle.astro";
 import Canvas from "../components/Canvas.astro";
 import Dopper from "../components/Dopper.astro";
 import Bril from "../components/Bril.astro";
+import Oorbel from "../components/Oorbel.astro";
+import WC from "../components/WC.astro";
+import Museum from "../components/Museum.astro";
 ---
 
 <!doctype html>
@@ -17,6 +20,7 @@ import Bril from "../components/Bril.astro";
 
 	<body>
 		<Header title={SITE_TITLE} />
+
 		<main>
 			<section id="kijkgat">
 				<picture>
@@ -38,13 +42,6 @@ import Bril from "../components/Bril.astro";
 					kijken en te zien.
 				</p>
 				<Circle />
-
-				<div class="try">
-					<button id="activateCamera">Ik durf wel wat</button>
-					<div id="camera-container">
-						<video id="camera-view" autoplay playsinline></video>
-					</div>
-				</div>
 			</section>
 
 			<section id="canvas_container">
@@ -52,50 +49,75 @@ import Bril from "../components/Bril.astro";
 			</section>
 
 			<section id="niet">
-				<h2>Wat is het niet</h2>
+				<h2>Wat is het niet:</h2>
 
 				<div class="not_container">
 					<div>
+						<h3>Een dopperlabel</h3>
 						<Dopper />
 					</div>
 					<div>
+						<h3>Een bril</h3>
 						<Bril />
 					</div>
+					<div>
+						<h3>Een wc-bril</h3>
+						<WC />
+					</div>
+					<div>
+						<h3>Een oorbel</h3>
+						<Oorbel />
+					</div>
+					<div>
+						<h3>Een museumjaarkaart</h3>
+						<Museum />
+					</div>
 				</div>
+
+				<section id="contact">
+					<h2>Contact</h2>
+					<div class="try">
+						<button id="activateCamera">Ik durf wel wat</button>
+						<div id="camera-container">
+							<h6 class="text-overlay">
+								Zien wij elkaar bij een workshop? <a
+									href="mailto:kijkgat@outlook.com">kijkgat@outlook.com</a
+								>
+							</h6>
+							<video id="camera-view" autoplay playsinline></video>
+						</div>
+					</div>
+				</section>
 			</section>
+			<Footer />
+			<script>
+				// JavaScript to access the camera and stream it to the video element
+				async function initCamera() {
+					const button = document.getElementById("activateCamera");
+					const container = document.getElementById("camera-container");
 
-			<section id="contact">
-				<h2>Contact</h2>
-			</section>
-		</main>
-		<Footer />
-		<script>
-			// JavaScript to access the camera and stream it to the video element
-			async function initCamera() {
-				const button = document.getElementById("activateCamera");
-				const container = document.getElementById("camera-container");
+					button.style.display = "none";
+					container.style.display = "block";
 
-				button.style.display = "none";
-				container.style.display = "block";
+					try {
+						const stream = await navigator.mediaDevices.getUserMedia({
+							audio: false,
+							video: {
+								facingMode: "environment",
+							},
+						});
+						const videoElement = document.getElementById("camera-view");
 
-				try {
-					const stream = await navigator.mediaDevices.getUserMedia({
-						audio: false,
-						video: {
-							facingMode: "environment",
-						},
-					});
-					const videoElement = document.getElementById("camera-view");
-
-					videoElement.srcObject = stream;
-				} catch (error) {
-					console.error("Error accessing the camera:", error);
+						videoElement.srcObject = stream;
+					} catch (error) {
+						console.error("Error accessing the camera:", error);
+					}
 				}
-			}
 
-			document
-				.getElementById("activateCamera")
-				.addEventListener("click", initCamera);
-		</script>
+				document
+					.getElementById("activateCamera")
+					.addEventListener("click", initCamera);
+			</script>
+		</main>
 	</body>
 </html>
