--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,9 @@
 
-:root {
-	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
-		0 16px 32px rgba(var(--gray), 33%);
-}
 
 :global(html) {
     scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: reduce) {
-    :global(html) {
-      scroll-behavior: auto;
-    }
-  }
 
 @font-face {
 	font-family: 'Inter';
@@ -49,8 +40,24 @@ body {
 	column-gap: 1rem;
 }
 
+.not_container div{
+	margin:3rem 0;
+}
+
+.text-overlay{
+	text-align:center;
+	position:absolute;
+	left:50%;
+	top:50%;
+	transform:translate(-50%,-50%);
+	color:white;
+	font-size:0.8rem;
+	text-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
 section{
 	text-align:center;
+	margin:3rem 0;
 }
 
 main {
@@ -68,6 +75,7 @@ h6 {
 	margin: 0 0 0.5rem 0;
 	color: rgb(var(--black));
 	line-height: 1.2;
+	padding-bottom:1rem;
 }
 h1 {
 	font-size: 3.052em;
