--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,12 @@ body {
 	color: #242124;
 }
 
+#kijkgat{
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
 .not_container{
 	display:flex;
 	flex-direction:column;
