--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -5,12 +5,6 @@
   var ctx = can.getContext("2d");
   var img;
 
-  var circle = {
-    x: can.width / 2, // Initial x-coordinate
-    y: can.height / 2, // Initial y-coordinate
-    radius: 50,
-  };
-
   function init() {
     // Set canvas dimensions based on the window size
     can.width = 500;
@@ -19,7 +13,10 @@
     // Load the image after setting canvas dimensions
     img = new Image();
     img.onload = function () {
-      redraw();
+      redraw({
+        x: -can.width,
+        y: -can.height,
+      });
     };
     img.src =
       "https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/The_Night_Watch_-_HD.jpg/1920px-The_Night_Watch_-_HD.jpg";
@@ -31,28 +28,40 @@
     init();
   });
 
-  can.addEventListener("mousemove", function (e) {
-    // Update circle position based on the current mouse position
-    var mouse = getMouse(e, can);
-    circle.x = mouse.x;
-    circle.y = mouse.y;
-    redraw();
-  });
+  can.addEventListener(
+    "mousemove",
+    function (e) {
+      e.preventDefault(); // Prevent scrolling on touch devices
+      var mouse = getMouse(e, can);
+      redraw(mouse);
+    },
+    false,
+  );
 
-  function redraw() {
+  can.addEventListener(
+    "touchmove",
+    function (e) {
+      e.preventDefault(); // Prevent scrolling on touch devices
+      var touch = e.touches[0];
+      var touchMouse = getMouse(touch, can);
+      redraw(touchMouse);
+    },
+    false,
+  );
+
+  function redraw(mouse) {
     can.width = can.width;
     ctx.drawImage(img, 0, 0, can.width, can.height);
     ctx.beginPath();
     ctx.rect(0, 0, can.width, can.height);
 
-    ctx.arc(circle.x, circle.y, circle.radius, 0, Math.PI * 2, true);
+    ctx.arc(mouse.x, mouse.y, 50, 0, Math.PI * 2, true);
 
     ctx.clip();
     ctx.fillStyle = "#FFF9E8";
     ctx.fillRect(0, 0, can.width, can.height);
   }
 
-  // Function to get mouse position relative to the canvas
   function getMouse(e, canvas) {
     var element = canvas,
       offsetX = 0,
