--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,9 +23,23 @@ import Museum from "../components/Museum.astro";
 
 		<main>
 			<section>
-				<h1>Kijkgat&copy;</h1>
+				<h1>Kijkgat &copy;</h1>
 			</section>
 			<section id="kijkgat"></section>
+			<div class="marquee">
+				<div>
+					-Kijkgat - Guckloch - Titthål - глазок - Trou à regarder - Ovisilmä -
+					Néző lyuk - Peephole - Mirilla - Kighul - Sjochgat - Gözetleme deliği
+					- Kíki -
+				</div>
+			</div>
+			<div class="marquee-reverse">
+				<div>
+					-Kijkgat - Guckloch - Titthål - глазок - Trou à regarder - Ovisilmä -
+					Néző lyuk - Peephole - Mirilla - Kighul - Sjochgat - Gözetleme deliği
+					- Kíki -
+				</div>
+			</div>
 
 			<section id="ervaar">
 				<h2>Ervaar</h2>
