--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,10 +107,14 @@ import Museum from "../components/Museum.astro";
 				let camera, scene, renderer;
 				let object;
 
+				const sectionContainer = document.getElementById("kijkgat");
+
+				const startWidth = sectionContainer?.clientWidth - 100;
+
 				init();
 
 				function init() {
-					camera = new THREE.PerspectiveCamera(45, 350 / 610, 0.1, 20);
+					camera = new THREE.PerspectiveCamera(45, startWidth / 610, 0.1, 20);
 					camera.position.z = 2.5;
 
 					// scene
@@ -163,7 +167,7 @@ import Museum from "../components/Museum.astro";
 					renderer = new THREE.WebGLRenderer({ antialias: true });
 					renderer.setPixelRatio(window.devicePixelRatio);
 					renderer.setClearColor(new THREE.Color("#FFF9E8")); // Set background color
-					renderer.setSize(350, 610);
+					renderer.setSize(startWidth, 610);
 
 					const kijkgat = document.getElementById("kijkgat");
 
