late night fixes met Tjerk

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,20 +26,22 @@ import Museum from "../components/Museum.astro";
 				<h1>Kijkgat &copy;</h1>
 			</section>
 			<section id="kijkgat"></section>
-			<div class="marquee">
-				<div>
-					-Kijkgat - Guckloch - Titthål - глазок - Trou à regarder - Ovisilmä -
-					Néző lyuk - Peephole - Mirilla - Kighul - Sjochgat - Gözetleme deliği
-					- Kíki -
+			<section>
+				<div class="marquee">
+					<div>
+						-Kijkgat - Guckloch - Titthål - глазок - Trou à regarder - Ovisilmä
+						- Néző lyuk - Peephole - Mirilla - Kighul - Sjochgat - Gözetleme
+						deliği - Kíki -
+					</div>
 				</div>
-			</div>
-			<div class="marquee-reverse">
-				<div>
-					-Kijkgat - Guckloch - Titthål - глазок - Trou à regarder - Ovisilmä -
-					Néző lyuk - Peephole - Mirilla - Kighul - Sjochgat - Gözetleme deliği
-					- Kíki -
+				<div class="marquee-reverse">
+					<div>
+						-Kijkgat - Guckloch - Titthål - глазок - Trou à regarder - Ovisilmä
+						- Néző lyuk - Peephole - Mirilla - Kighul - Sjochgat - Gözetleme
+						deliği - Kíki -
+					</div>
 				</div>
-			</div>
+			</section>
 
 			<section id="ervaar">
 				<h2>Ervaar</h2>
