--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,12 @@ import { SEO } from "astro-seo";
 			}}
 		/>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+
+		<style>
+			#canvas_container {
+				position: relative;
+			}
+		</style>
 	</head>
 
 	<body>
