--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -1,4 +1,6 @@
-<canvas id="canvas"></canvas>
+<canvas id="canvas"> </canvas>
+
+<div class="canvas_overlay">Plaats je cursor hier om te ervaren.</div>
 
 <script>
   var can = document.getElementById("canvas");
@@ -92,5 +94,17 @@
     cursor: none;
     width: 100%;
     height: 100%;
+    border: 8px dotted rgba(232, 232, 232, 0.766);
+  }
+
+  .canvas_overlay {
+    position: absolute;
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 1000;
+    font-size: 1.5rem;
+    font-weight: 700;
   }
 </style>
