--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,26 +15,4 @@ import People from "./People.astro";
 		 Online gezet door <a href="https://potloodgum.com">Potloodgum</a></span
 	>
 </footer>
-<style>
-	footer {
-		margin: 0;
-		padding: 0 1em;
-		border-top: 0.4rem solid black;
-		display: flex;
-		justify-content: center;
-	}
-	span {
-		padding-top: 0.3rem;
-		text-align: center;
-	}
-	.people {
-		width: 20%;
-		margin-bottom: -10px;
-	}
-
-	.people_container {
-		display: flex;
-		margin-top: 2rem;
-		justify-content: center;
-	}
-</style>
+<style></style>
