--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,9 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
-import Circle from "../components/Circle.astro";
+
 import Canvas from "../components/Canvas.astro";
-import Dopper from "../components/Dopper.astro";
-import Bril from "../components/Bril.astro";
-import Oorbel from "../components/Oorbel.astro";
-import WC from "../components/WC.astro";
-import Museum from "../components/Museum.astro";
+
 import { SEO } from "astro-seo";
 ---
 
@@ -47,10 +43,48 @@ import { SEO } from "astro-seo";
 			</section>
 
 			<section>
-				<h1>Kijkgat</h1>
+				<div class="spacer-horizontal"></div>
+				<div class="align-centre-flex">
+					<h1>Kijkgat</h1>
+				</div>
+				<div class="align-centre-flex">
+					<h2>Tagline</h2>
+				</div>
+				<div class="spacer-horizontal"></div>
+				<div class="align-centre">
+					<div id="kijkgat"></div>
+				</div>
+
+				<section class="hero-section">
+					<div class="loop-container">
+						<div class="item">
+							Kijkgat - Kykgat - Guckloch - Trou de regard - Mirilla Spioncino -
+							Olheirete Ochi de pisica Otwór w ścianie Глубина Titthål Kighul
+							Kjøttkrok Kíkauga
+						</div>
+						<div class="item">
+							Kijkgat Kykgat Guckloch Trou de regard Mirilla Spioncino Olheirete
+							Ochi de pisica Otwór w ścianie Глубина Titthål Kighul Kjøttkrok
+							Kíkauga
+						</div>
+					</div>
+				</section>
+			</section>
+			<section>
+				<div class="spacer-horizontal"></div>
+				<div class="align-centre-flex">
+					<h1>Wat het is</h1>
+				</div>
+			</section>
+			<section>
+				<div class="spacer-horizontal"></div>
+				<div class="align-centre-flex">
+					<h1>Wat het doet</h1>
+				</div>
 			</section>
 
-			<!-- 
+			<Footer />
+
 			<script>
 				import * as THREE from "three";
 				import { OBJLoader } from "three/addons/loaders/OBJLoader.js";
@@ -61,7 +95,7 @@ import { SEO } from "astro-seo";
 
 				const sectionContainer = document.getElementById("kijkgat");
 
-				const startWidth = sectionContainer?.clientWidth - 100;
+				const startWidth = 500;
 
 				init();
 
@@ -118,7 +152,7 @@ import { SEO } from "astro-seo";
 
 					renderer = new THREE.WebGLRenderer({ antialias: true });
 					renderer.setPixelRatio(window.devicePixelRatio);
-					renderer.setClearColor(new THREE.Color("#FFF9E8")); // Set background color
+					renderer.setClearColor(new THREE.Color("#FFF")); // Set background color
 					renderer.setSize(startWidth, 610);
 
 					const kijkgat = document.getElementById("kijkgat");
@@ -194,7 +228,57 @@ import { SEO } from "astro-seo";
 
 				if (activateCameraButton) {
 					activateCameraButton.addEventListener("click", initCamera);
-				} -->
+				}
+
+				const lerp = (current, target, factor) =>
+					current * (1 - factor) + target * factor;
+
+				class LoopingText {
+					constructor(el) {
+						this.el = el;
+						this.lerp = { current: 0, target: 0 };
+						this.interpolationFactor = 0.1;
+						this.speed = 0.02;
+						this.direction = -1; // -1 (to-left), 1 (to-right)
+
+						// Init
+						this.el.style.cssText = `position: relative; display: inline-flex; white-space: nowrap;`;
+						this.el.children[1].style.cssText = `position: absolute; left: ${
+							100 * -this.direction
+						}%;`;
+						this.events();
+						this.render();
+					}
+
+					events() {}
+
+					animate() {
+						this.lerp.target += this.speed;
+						this.lerp.current = lerp(
+							this.lerp.current,
+							this.lerp.target,
+							this.interpolationFactor,
+						);
+
+						if (this.lerp.target > 100) {
+							this.lerp.current -= this.lerp.target;
+							this.lerp.target = 0;
+						}
+
+						const x = this.lerp.current * this.direction;
+						this.el.style.transform = `translateX(${x}%)`;
+					}
+
+					render() {
+						this.animate();
+						window.requestAnimationFrame(() => this.render());
+					}
+				}
+
+				document
+					.querySelectorAll(".loop-container")
+					.forEach((el) => new LoopingText(el));
+			</script>
 		</main>
 	</body>
 </html>
