--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,20 @@
 	box-sizing: border-box;
 }
 
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+}
+
+/* all sizes are relative to 16px */
+
+html {
+  font-size: 62.5%;
+  /* is 16px, 100/16 = 62.5 10/16 */
+}
+
 html, body{
 	scroll-behavior: smooth;
 }
@@ -25,4 +39,45 @@ body {
 	font-family: 'Inter', sans-serif;
 	margin: 0;
 	padding: 0;
+}
+
+h1{
+	font-size: 5.2rem;
+	font-weight: 700;
+}
+
+h2{
+	font-size: 3.2rem;
+	font-weight: 700;
+}
+
+.spacer-horizontal{
+	margin-top:2rem;
+	margin-bottom:2rem;
+	height:1rem;
+}
+
+
+.align-centre{
+	left:50%;
+	transform:translateX(-50%);
+	position:absolute;
+}
+
+.align-centre-flex{
+	display:flex;
+	justify-content:center;
+}
+
+section{
+	width:100%;
+	height:95vh;
+}
+
+.hero-section {
+  position: relative;
+  top: 50vh;
+  overflow: hidden;
+  font: 900 9vw/1 sans-serif;
+  min-height: 100vh;
 }
