--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,16 +55,18 @@ import { SEO } from "astro-seo";
 					<div id="kijkgat"></div>
 				</div>
 
-				<div class="loop-container">
-					<div class="item">
-						Kijkgat - Kykgat - Guckloch - Trou de regard - Mirilla Spioncino -
-						Olheirete Ochi de pisica Otwór w ścianie Глубина Titthål Kighul
-						Kjøttkrok Kíkauga
-					</div>
-					<div class="item">
-						Kijkgat Kykgat Guckloch Trou de regard Mirilla Spioncino Olheirete
-						Ochi de pisica Otwór w ścianie Глубина Titthål Kighul Kjøttkrok
-						Kíkauga
+				<div class="hero-section">
+					<div class="loop-container">
+						<div class="item">
+							Kijkgat - Kykgat - Guckloch - Trou de regard - Mirilla Spioncino -
+							Olheirete Ochi de pisica Otwór w ścianie Глубина Titthål Kighul
+							Kjøttkrok Kíkauga
+						</div>
+						<div class="item">
+							Kijkgat Kykgat Guckloch Trou de regard Mirilla Spioncino Olheirete
+							Ochi de pisica Otwór w ścianie Глубина Titthål Kighul Kjøttkrok
+							Kíkauga
+						</div>
 					</div>
 				</div>
 			</section>
